--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.1.0"
   },
   "dependencies": {
-    "angular-chart.js": "~0.8.4"
+    "angular-chart.js": "~0.8.4",
+    "ionic-datepicker": "~0.9.0"
   }
 }
